--- a/profile-orders.html
+++ b/profile-orders.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="header__inner  container">
             <div class="header__home">
-                <a href="./catalog-product.html"><img class="header__home-image"
+                <a href="./index.html"><img class="header__home-image"
                         src="./img/material-symbols-light_home-outline.svg" alt="Home"></a>
 
                 <div class="header__home-description">
@@ -158,7 +158,7 @@
         <div class="mobile-overlay__body">
             <ul class="mobile-overlay__list">
                 <li class="mobile-overlay__item">
-                    <a class="mobile-overlay__link" href="./catalog-product.html">Главная</a>
+                    <a class="mobile-overlay__link" href="./index.html">Главная</a>
                 </li>
                 <li class="mobile-overlay__item">
                     <a class="mobile-overlay__link" href="./profile.html">Профиль</a>
@@ -172,6 +172,7 @@
             </ul>
         </div>
     </dialog>
+
 </body>
 
 </html>
