Add new products and card of product, refactoring basket, catalog, profile

--- a/index.html
+++ b/index.html
@@ -194,6 +194,12 @@
         </div>
     </dialog>
 
+    <div class="popup" style="display: none;">
+        <p>Товар добавлен в корзину!</p>
+    </div>
+
+
+
     <script src="./constants/root.js"></script>
     <script src="./utils/localStorageUtil.js"></script>
     <script src="./constants/catalog.js"></script>
